overflow fixed

--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@
 
 
 /* CSS RESET */
+
+html {
+    overflow: hidden;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -45,7 +50,7 @@
 }
 
 body {
-    min-height: ;
+    overflow: hidden;
     line-height: 1.7;
     font-family: "Neue Machina";
 }
